RESOLVED FIXED314283
[iOS] http/tests/in-app-browser-privacy/non-app-bound-domain-does-not-get-app-bound-session.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=314283
Summary [iOS] http/tests/in-app-browser-privacy/non-app-bound-domain-does-not-get-app...
Chris Dumez
Reported 2026-05-06 20:55:32 PDT
http/tests/in-app-browser-privacy/non-app-bound-domain-does-not-get-app-bound-session.html is a constant crash on iOS: ``` ASSERTION FAILED: applicationBundleIsEqualTo() and applicationBundleStartsWith() must not be called before setApplicationBundleIdentifierOverride() !applicationBundleIdentifierOverrideWasQueried /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm(350) : void WTF::setApplicationBundleIdentifierOverride(const String &) 1 0x10ca465c0 WTF::setApplicationBundleIdentifierOverride(WTF::String const&) 2 0x12ed16dc8 +[WKWebView(WKTesting) _setApplicationBundleIdentifier:] 3 0x100eb933c WTR::TestController::setApplicationBundleIdentifier(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char>> const&) 4 0x100e69ec8 WTR::TestController::createWebViewWithOptions(WTR::TestOptions const&) 5 0x100e6a8e8 WTR::TestController::ensureViewSupportsOptionsForTest(WTR::TestInvocation const&) 6 0x100e6dcc0 WTR::TestController::configureViewForTest(WTR::TestInvocation const&) 7 0x100ed0414 WTR::TestInvocation::invoke() 8 0x100e72df4 WTR::TestController::runTest(char const*) 9 0x100e734f0 WTR::TestController::runTestingServerLoop() 10 0x100e6416c WTR::TestController::run() 11 0x100e638ac WTR::TestController::TestController(int, char const**) 12 0x100e64234 WTR::TestController::TestController(int, char const**) 13 0x100e14830 -[WebKitTestRunnerSceneDelegate _runTestController] ```
Attachments
Chris Dumez
Comment 1 2026-05-06 20:55:39 PDT
Chris Dumez
Comment 2 2026-05-06 20:57:32 PDT
EWS
Comment 3 2026-05-07 01:13:03 PDT
Committed 312782@main (d5f91dc9f393): <https://commits.webkit.org/312782@main> Reviewed commits have been landed. Closing PR #64438 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.