[iOS] http/tests/in-app-browser-privacy/non-app-bound-domain-does-not-get-app-bound-session.html is a constant crash https://bugs.webkit.org/show_bug.cgi?id=314283 rdar://176377254

Reviewed by Ryosuke Niwa.

Creating WKPreferences in TestController::initialize() caused
WebPreferencesStore::defaults() to be lazily populated before the
application bundle identifier override was set. This triggered
CocoaApplication::isAppleBooks() (via defaultUseAsyncUIKitInteractions())
which queries bundleIdentifierOverride(), setting the
applicationBundleIdentifierOverrideWasQueried flag. Tests that later call
setApplicationBundleIdentifierOverride() would then hit the assertion
that this flag must be false.

The fix is to remove the premature WKPreferencesCreate() call since
m_preferences is always recreated in generatePageConfiguration() after
the bundle identifier override has been set.

* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):

Canonical link: https://commits.webkit.org/312782@main